--- a/pom.xml
+++ b/pom.xml
@@ -50,16 +50,13 @@
             <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-streams</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+            <version>3.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
