--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
+  config:
+    import: kafka.yml
   application:
-    name: t1-java-demo
+    name: t1-java-demof
   datasource:
-    url: "jdbc:postgresql://localhost:5432/t1_demo"
-    username: "postgres"
-    password: "postgres"
+    url: ${DATASOURCE_URL:jdbc:postgresql://localhost:5432/t1_demo}
+    username: ${DATASOURCE_USERNAME:postgres}
+    password: ${DATASOURCE_PASSWORD:postgres}
     driverClassName: org.postgresql.Driver
   liquibase:
     enabled: true
@@ -21,7 +23,7 @@ spring:
       jdbc.batch_size: ${DATASOURCE_BATCH_SIZE:50}
       order_inserts: true
       order_updates: true
-    show-sql: false
+    show-sql: ${SHOW_SQL:false}
 
 springdoc:
   api-docs:
@@ -32,32 +34,13 @@ springdoc:
 logging:
   level:
     ROOT: INFO
+    org.apache.kafka: ERROR
     ru.t1.java.demo.controller.ClientController: DEBUG
 
-t1:
-  kafka:
-    bootstrap-servers: ${KAFKA_SERVER:localhost:9093}
-    security.protocol: PLAINTEXT
-    consumer:
-      group-id: t1-demo
-      auto-offset-reset: earliest
-      max.poll.records: 10
-      enable-auto-commit: false
-    producer:
-      enable: true
-      acks: all
-      retries: 5
-    topic:
-      client_registration: t1_demo_client_registration
-      client_id_registered: t1_demo_client_registered
-      client_transactions: t1_demo_client_transactions
-      t1_demo_accounts: t1_demo_accounts
-      t1_demo_transactions: t1_demo_transactions
-      t1_demo_metrics: t1_demo_metrics
-    listener:
-      conurrency: 3
-      poll-timeout: 1000
-
-
-
-
+management:
+  endpoints:
+    enabled-by-default: false
+    web.exposure.include: health, prometheus
+  endpoint:
+    health.enabled: true
+    prometheus.enabled: true
