--- a/src/main/resources/kafka.yml
+++ b/src/main/resources/kafka.yml
@@ -8,6 +8,7 @@ t1:
     consumer:
       group-id: ${KAFKA_GROUP_ID:t1-demo}
       auto-offset-reset: earliest
+      isolation-level: read_committed
       max-poll-records: ${KAFKA_MAX_POLL_RECORDS:10}
       enable-auto-commit: false
       properties:
@@ -26,6 +27,7 @@ t1:
       t1_demo_accounts: ${KAFKA_ACCOUNTS_TOPIC:t1_demo_accounts}
       t1_demo_transactions: ${KAFKA_TRANSACTIONS_TOPIC:t1_demo_transactions}
       t1_demo_metrics: ${KAFKA_METRICS_TOPIC:t1_demo_metrics}
+      t1_demo_transactions_accept: ${KAFKA_TRANSACTIONS_ACCEPT_TOPIC:t1_demo_transactions_accept}
     listener:
       concurrency: ${KAFKA_CONCURRENCY:3}
       poll-timeout: 1000
