--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,13 @@
+
 spring:
   config:
     import: kafka.yml
   application:
-    name: t1-java-demof
+    name: t1-java-demo
   datasource:
     url: ${DATASOURCE_URL:jdbc:postgresql://localhost:5432/t1_demo}
     username: ${DATASOURCE_USERNAME:postgres}
-    password: ${DATASOURCE_PASSWORD:postgres}
+    password: ${DATASOURCE_PASSWORD:password}
     driverClassName: org.postgresql.Driver
   liquibase:
     enabled: true
@@ -36,30 +37,6 @@ logging:
     ROOT: INFO
     org.apache.kafka: ERROR
     ru.t1.java.demo.controller.ClientController: DEBUG
-
-t1:
-  kafka:
-    bootstrap-servers: ${KAFKA_SERVER:localhost:9093}
-    security.protocol: PLAINTEXT
-    consumer:
-      group-id: t1-demo
-      auto-offset-reset: earliest
-      max.poll.records: 10
-      enable-auto-commit: false
-    producer:
-      enable: true
-      acks: all
-      retries: 5
-    topic:
-      client_registration: t1_demo_client_registration
-      client_id_registered: t1_demo_client_registered
-      client_transactions: t1_demo_client_transactions
-      t1_demo_accounts: t1_demo_accounts
-      t1_demo_transactions: t1_demo_transactions
-      t1_demo_metrics: t1_demo_metrics
-    listener:
-      conurrency: 3
-      poll-timeout: 1000
 
 management:
   endpoints:
