--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,21 @@
             <artifactId>track-starter</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <!--Shedlock-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-core</artifactId>
+            <version>5.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-spring</artifactId>
+            <version>5.14.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
